# LANGSERVE_EXAMPLES

./: .gitignore
on_prem_rag/: .dockerignore  Dockerfile  README.md  docker-compose.yml  env.list  pyproject.toml
on_prem_rag/app/: server.py
